# c_altstack

./: clib.json  dev.sh  meson.build
include/: aes_module.h  altstack.h  crypto_module.h
src/: aes_functions.c  altstack.c  crypto_module.c  deps.c  globals.c
tests/: flag_subcommands.c  test_altstack_commands.c  test_altstack_module1.c
